Añadir lista de tareas a main activity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation libs.constraintlayout
     implementation libs.jbcrypt  // Para el cifrado de las contraseñas
     implementation libs.appcompat.v140 // Para el toolbar
+    implementation libs.recyclerview
+    implementation libs.cardview
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
