--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation libs.appcompat.v140 // Para el toolbar
     implementation libs.recyclerview
     implementation libs.material.v190  // Para el botón flotante
+    implementation libs.drawerlayout
+    implementation libs.navigation.ui
     implementation libs.cardview
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
