--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         <activity android:name=".NuevaTareaActivity">
 
         </activity>
-
+        <activity android:name=".AjustesActivity" />
     </application>
 
 </manifest>
