--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
 
         </activity>
         <activity android:name=".AjustesActivity" />
+        <activity android:name=".EditTareaActivity" />
     </application>
 
 </manifest>
