Actividad calendario (mal) (Comunicacion entre fragments)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
 
         </activity>
         <activity android:name=".EditTareaActivity" />
+        <activity android:name=".CalendarioActivity" />
         <receiver android:name=".DeadlineReceiver" />
     </application>
 
