Añadir nuevas dependencias de Open Street Maps

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,18 @@ dependencies {
     implementation libs.drawerlayout
     implementation libs.navigation.ui
     implementation libs.cardview
+    implementation (libs.osmdroid.android) {
+        exclude group: 'com.j256.ormlite', module: 'ormlite-core'
+    }
+    implementation (libs.osmdroid.wms) {
+        exclude group: 'com.j256.ormlite', module: 'ormlite-core'
+    }
+    implementation (libs.osmdroid.mapsforge) {
+        exclude group: 'com.j256.ormlite', module: 'ormlite-core'
+    }
+    implementation (libs.osmdroid.geopackage) {
+        exclude group: 'com.j256.ormlite', module: 'ormlite-core'
+    }
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
