--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         </activity>
         <activity android:name=".EditTareaActivity" />
         <activity android:name=".CalendarioActivity" />
+        <activity android:name=".UbicacionActivity" />
         <receiver android:name=".DeadlineReceiver" />
         <receiver
             android:name=".BootReceiver"
