--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.Proyecto"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity android:name=".MainActivity">
 
